# vulscan-platform

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  project-plan.html  rustfmt.toml  scan-report-dual-targets.json  scan-report-ljblib.json  scan-report-ljbljb.json
backend/auth-service/: Cargo.toml
backend/auth-service/src/: jwt.rs  jwt_test.rs  lib.rs  rbac.rs  service.rs  store.rs
backend/db-migrations/: Cargo.toml
backend/db-migrations/src/: main.rs
backend/plugin-system/: Cargo.toml
backend/plugin-system/src/: base.rs  lib.rs  plugins.rs  registry.rs
backend/plugin-system/src/plugins/: directory_scanner.rs  directory_scanner_test.rs  sql_injection_scanner.rs  sql_injection_scanner_test.rs  weak_password_scanner.rs  weak_password_scanner_test.rs  xss_scanner.rs  xss_scanner_test.rs
backend/scanner-engine/: Cargo.toml
backend/scanner-engine/benches/: scan_benchmark.rs
backend/scanner-engine/src/: detectors.rs  engine.rs  error.rs  lib.rs  main.rs  rate_limiter.rs  resource_control.rs  result.rs  rules.rs  target.rs  traits.rs  worker.rs
backend/shared-lib/: Cargo.toml
backend/shared-lib/src/: errors.rs  lib.rs  logging.rs  metrics.rs  models.rs  schemas.rs  utils.rs
backend/task-scheduler/: Cargo.toml
backend/task-scheduler/src/: lib.rs  main.rs  queue.rs  scheduler.rs
backend/web-api/: Cargo.toml
backend/web-api/src/: config.rs  lib.rs  main.rs  middleware.rs  routes.rs  services.rs
docs/: erd.md  openapi.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: ErrorBoundary.tsx  Header.tsx  Sidebar.tsx
frontend/src/context/: AuthContext.tsx  LanguageContext.tsx  ThemeContext.tsx  translations.ts
frontend/src/hooks/: useScanProgress.ts  useTheme.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Reports.tsx  ScanTasks.tsx  Settings.tsx  Targets.tsx  Vulnerabilities.tsx
frontend/src/types/: index.ts
ljblib-security-report/: ljblib-security-report.html
ljblib-security-report/assets/: charts.js
prompts/: phase1-architecture-design.md  phase2-backend-api-development.md  phase3-scan-engine-implementation.md  phase4-frontend-development.md  phase5-integration-optimization.md
vulscan-runner/: Cargo.toml
vulscan-runner/src/: main.rs
