[package]
name = "vulscan-pro"
version = "0.3.0"
edition = "2021"

[workspace]

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "socks", "multipart"] }
scraper = "0.18"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4"] }
async-trait = "0.1"
