[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-lib = { path = "../shared-lib" }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp"] }
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = "0.18"
