[package]
name = "plugin-system"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-lib = { path = "../shared-lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.5", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
regex = "1.10"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
