[package]
name = "scanner-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance, modular vulnerability scanning engine core"

[dependencies]
thiserror = "1.0.58"
anyhow = "1.0.75"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json", "cookies", "socks"] }
scraper = "0.18.1"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
tracing = "0.1.40"
tracing-subscriber = "0.3"
prometheus = "0.13.3"
ipnet = "2.9.0"
cidr-utils = "0.5.0"
url = { version = "2.5.0", features = ["serde"] }
futures = "0.3.30"
notify = "6.1.1"
crossbeam-channel = "0.5.12"
async-stream = "0.3.5"
pin-project = "1.1.4"
urlencoding = "2.1.2"
async-trait = "0.1.78"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
shared-lib = { path = "../shared-lib" }

[dev-dependencies]
tokio-test = "0.4.4"
mockito = "1.0.1"
tempfile = "3.10.1"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "scan_benchmark"
harness = false
