[package]
name = "shared-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }
derive_more = "0.99"
url = { version = "2.5", features = ["serde"] }
actix-web = "4.5"
lazy_static = "1.4"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "chrono", "json"] }
rand = "0.8"
bcrypt = "0.15"
