[package]
name = "task-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-lib = { path = "../shared-lib" }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "chrono", "json"] }
redis = "0.24"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
config = "0.14"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
